# sim2lbuilder

./: .gitignore  .readthedocs.yaml  Development.ipynb  Intro.ipynb  README.md  WidgetConstructor1.ipynb  WidgetConstructor2.ipynb  WidgetConstructor3.ipynb  inputtypes.ipynb  meltrccas.ipynb  outputtypes.ipynb  polymerxtal.ipynb  pyproject.toml  setup.py  setupbase.py  sim2lbuilder.py
docs/source/: api.rst  conf.py  index.rst  ipywidgets.rst  javascript.rst  usage.rst
examples/: WidgetConstructor1.ipynb  WidgetConstructor2.ipynb  WidgetConstructor3.ipynb  inputtypes.ipynb  mdsandbox.ipynb  meltingkim.ipynb  meltrccas.ipynb  polymerxtal.ipynb  st4pcpbt.ipynb  tutorial.ipynb
sim2lbuilder/: __init__.py  _version.py  components.py  sim2lbuilder.py  uidl.py  utils.py  views.py  widget.py
sim2lbuilder/components/: __init__.py  elements.py  inputs.py
