[build-system]
requires = [
    'flit_core',
    "setuptools"
]
[project]
name = "sim2lbuilder"
version = "0.0.7"
description = "Simtool builder"
license = {text = "BSD License"}
authors = [
    {name = "Daniel Mejia", email = "dmejiapa@purdue.edu"}
]
maintainers = [
    {name = "Daniel Mejia", email = "dmejiapa@purdue.edu"}
]
readme = "README.md"
documentation = "https://sim2lbuilder.readthedocs.io/en/latest/usage.html"
repository = "https://github.com/denphi/sim2lbuilder"
keywords = ["simtool", "Web App", "Sim2L"]
classifiers = [
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: BSD License',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.4',
    'Programming Language :: Python :: 3.5',
    'Programming Language :: Python :: 3.6',
    'Framework :: Jupyter'
]
packages = [
    { include = "sim2lbuilder" }
]
dynamic = ["version", "description"]