[build-system]
requires = [
    'flit_core',
    "setuptools"
]
[project]
name = "sim2lbuilder"
license = {text = "BSD License"}
authors = [
    {name = "Daniel Mejia", email = "dmejiapa@purdue.edu"}
]
maintainers = [
    {name = "Daniel Mejia", email = "dmejiapa@purdue.edu"}
]
readme = "README.md"
keywords = ["simtool", "Web App", "Sim2L"]
classifiers = [
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: BSD License',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.4',
    'Programming Language :: Python :: 3.5',
    'Programming Language :: Python :: 3.6',
    'Framework :: Jupyter'
]

dynamic = ["version", "description"]

[project.urls]
documentation = "https://sim2lbuilder.readthedocs.io/en/latest/usage.html"
repository = "https://github.com/denphi/sim2lbuilder"
